# bazel-practice

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-practice  bazel-testlogs  go.mod  go_deps.bzl  package.json
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/java_greeter/src/main/java/com/jogz78/javagreeter/greeter/: BUILD.bazel  Greeter.java
projects/java_greeter/src/main/java/com/jogz78/javagreeter/main/: BUILD.bazel  Main.java
projects/my-python-app/: BUILD.bazel  main.py
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
projects/projectA/: BUILD.bazel
projects/python_web/: BUILD.bazel
