load("@bazel_gazelle//:def.bzl", "gazelle")
#load("@npm//:defs.bzl", "npm_link_all_packages")

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

#npm_link_all_packages(name = "npm")