load("@python_deps//:requirements.bzl","requirement")
load("@io_bazel_rules_docker//python3:image.bzl", py_image="py3_image")
load("@io_bazel_rules_docker//container:container.bzl","container_push")


py_library(
    name = "python_web_lib",
    srcs = ["python_web.py"],
    deps = [
        requirement("Flask"),
        "//projects/calculator:calculator"
    ]
)

py_binary(
    name = "python_web",
    srcs = ["python_web.py"],
    deps = [":python_web_lib"],
    main = "python_web.py",
)


py_image(
    name = "python_web_image",
    srcs = ["python_web.py"],
    deps = [":python_web_lib"],
    main = "python_web.py",
)

container_push(
   name = "publish",
   image = ":python_web_image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "jogz78/monorepo-python-web",
   tag = "1",
)



